<resources>
    <string name="app_name">Aoki</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="about">关于…</string>
    <string name="about_title">关于 Aoki</string>
    <string name="update_check_failed">检查更新失败，请检查你的网络连接</string>
    <string name="update_fetch_title">发现新版本 %s</string>
    <string name="update_fetch_download">下载</string>
    <string name="update_fetch_copy">复制下载地址</string>
    <string name="update_download_start">开始下载 %s</string>
    <string name="update_download_failed">下载失败 %s</string>
    <string name="update_download_done">下载完成</string>
    <string name="update_downloading_title">正在下载</string>
    <string name="settings">设置</string>
    <string name="settings_title">设置</string>
    <string name="prompt_qq">QQ号</string>
    <string name="prompt_password">密码</string>
    <string name="tips_not_complete">那个…你好像忘了输入什么东西</string>
    <string name="tips_not_support_qrlogin">只有 手表 和 MacOS 协议支持扫码登录</string>
    <string name="action_accounts">账号管理</string>
    <string name="action_check_qrlogin">扫码登录</string>
    <string name="accounts_title">账号管理</string>
    <string name="accounts_message">你要对这个账号做什么</string>
    <string name="accounts_operation_edit_device">编辑设备信息</string>
    <string name="accounts_operation_export">打包并发送到…</string>
    <string name="accounts_operation_del_device">删除设备信息 DEVICE.JSON</string>
    <string name="accounts_operation_del_cache">删除登录缓存</string>
    <string name="accounts_operation_del_cache_session">删除登录会话</string>
    <string name="accounts_operation_del">删除所有数据</string>
    <string name="accounts_operation_done">操作完成</string>
    <string name="action_sign_in">登录</string>
    <string name="login_confirm">是否登录</string>
    <string name="login_failed">"登录失败"</string>
    <string name="qrlogin_title">扫码登录</string>
    <string name="qrlogin_description">请使用另一台设备在手机QQ上扫描二维码登录。或者你可以使用 QAuxiliary、QNotified 等 XPosed 模块移除相册扫码登录限制。长按二维码可保存至系统相册。</string>
    <string name="qrlogin_state_WAITING_FOR_SCAN">等待扫描二维码中</string>
    <string name="qrlogin_state_WAITING_FOR_CONFIRM">扫描完成，请在手机 QQ 确认登录</string>
    <string name="qrlogin_state_CANCELLED">已取消登录，将会重新获取二维码</string>
    <string name="qrlogin_state_TIMEOUT">扫描超时，将会重新获取二维码</string>
    <string name="qrlogin_state_CONFIRMED">已确认登录</string>
    <string name="qrlogin_saved">二维码图片已保存到系统相册</string>
    <string name="qrlogin_save_failed">找不到二维码图片缓存</string>
    <string name="login_slide_needed">"需要滑块验证"</string>
    <string name="slide_title">滑块验证</string>
    <string name="scan_title">其他验证方式</string>
    <string name="scan_copy">复制链接</string>
    <string name="scan_copy_done">已复制到剪贴板</string>
    <string name="scan_copy_failed">无法获取剪贴板服务</string>
    <string name="scan_refresh">刷新</string>
    <string name="captcha_pic_title">图片验证码</string>
    <string name="captcha_pic_message">请输入图中的验证码</string>
    <string name="captcha_sms_request_title">需要登录验证</string>
    <string name="captcha_sms_request_phoneNumber">(+$countryCode) $phoneNumber</string>
    <string name="captcha_sms_request_phoneNumberNull">(无法获取到手机号码)</string>
    <string name="captcha_sms_request_message">一条短信验证码将发送到你的手机 $phoneNumberFull. 运营商可能会收取正常短信费用,
        是否继续?
    </string>
    <string name="captcha_sms_request_send">发送验证码</string>
    <string name="captcha_sms_request_other">其他验证方式</string>
    <string name="captcha_sms_send_title">验证码已发送</string>
    <string name="captcha_sms_send_fail_title">验证码发送失败</string>
    <string name="captcha_sms_send_message">发送验证码成功, 请注意查收. 若未收到, 可在一分钟后重试</string>
    <string name="captcha_sms_send_retry">重试</string>
    <string name="edit_device_action">编辑设备信息</string>
    <string name="edit_device_title">编辑设备信息</string>
    <string name="edit_device_nav_1">主要信息</string>
    <string name="edit_device_nav_2">次要信息</string>

    <string name="protocol_ANDROID_PHONE">手机协议</string>
    <string name="protocol_ANDROID_PAD">平板协议</string>
    <string name="protocol_ANDROID_WATCH">手表协议</string>
    <string name="protocol_IPAD">iPad 协议</string>
    <string name="protocol_MACOS">MacOS 协议</string>
    <string name="hb_strategy_STAB_HB">稳定策略(STAB)</string>
    <string name="hb_strategy_REGISTER">在线状态策略(REG)</string>
    <string name="hb_strategy_NONE">无策略(NONE)</string>
    <string name="edit_device_load">从本地文件重新加载</string>
    <string name="edit_device_save">保存设备信息(V3)</string>
    <string name="edit_device_save_v2">保存设备信息(V2)</string>
    <string name="edit_device_help">
        <Data><![CDATA[
【使用方法】设备信息不懂的最好不要乱改，不认识的让它保持默认值，使用自己手机的信息或随机生成的信息就足够了。改为 $GEN 可重新生成数值。编辑完毕后，需要手动在右上角保存设备信息。
【保存设备信息】V3格式适合最新开发版以及 2.15.0-RC，旧版本请自行保存为V2格式。
]]> </Data>
    </string>
    <string name="edit_device_item_display">显示参数 Display</string>
    <string name="edit_device_item_product">产品名 Product</string>
    <string name="edit_device_item_device">设施名 Device</string>
    <string name="edit_device_item_board">主板 board</string>
    <string name="edit_device_item_brand">品牌 brand</string>
    <string name="edit_device_item_model">型号 Model</string>
    <string name="edit_device_item_bootloader">BootLoader</string>
    <string name="edit_device_item_fingerprint">设备指纹 Fingerprint</string>
    <string name="edit_device_item_bootid">BootId</string>
    <string name="edit_device_item_procversion">内核版本 ProcVersion</string>
    <string name="edit_device_item_baseband">基带版本 BaseBand</string>
    <string name="edit_device_item_version_incremental">系统版本:源码控制版本号 Version.incremental</string>
    <string name="edit_device_item_version_release">系统版本:版本字符串 Version.release</string>
    <string name="edit_device_item_version_codename">系统版本:当前开发代码 Version.codename</string>
    <string name="edit_device_item_version_sdk">系统版本:版本号 Version.sdk</string>
    <string name="edit_device_item_siminfo">SIM卡类型 SIMInfo</string>
    <string name="edit_device_item_ostype">系统类型 OSType</string>
    <string name="edit_device_item_macaddress">MAC地址 MACAddress</string>
    <string name="edit_device_item_wifibssid">路由器MAC地址 WiFiBSSID</string>
    <string name="edit_device_item_wifissid">WiFi名称 WiFiSSID</string>
    <string name="edit_device_item_imsimd5">唯一标识符 imsiMd5</string>
    <string name="edit_device_item_imei">手机串号 IMEI</string>
    <string name="edit_device_item_apn">网络类型 APN</string>
    <string name="edit_device_item_androidid">AndroidID</string>
    <string name="edit_device_saved">你已保存设备信息文件 $qq/device.json</string>
    <string name="edit_device_reloaded">已重新读取设备信息文件 $qq/device.json</string>
    <string name="edit_device_reset">已重置数值</string>
    <string name="edit_device_invaild">你输入的数值无效</string>
    <string name="protocol_check">查看协议版本信息</string>
    <string name="protocol_load">重新加载本地协议变更</string>
    <string name="protocol_load_title">加载本地协议变更</string>
    <string name="protocol_load_info">从文件夹 Android/data/top.mrxiaom.mirai.aoki/files/AokiMirai/ 中寻找以协议名称命名的 json 文件重新加载协议变更。如 android_pad.json</string>
    <string name="protocol_load_done">已加载 $count 个协议变更</string>
    <string name="protocol_download">从网络仓库下载协议变更</string>
    <string name="protocol_download_start">开始下载…</string>
    <string name="protocol_download_done">协议变更已下载完成并应用</string>
    <string-array name="update_channel_display">
        <item>稳定版</item>
        <item>测试版</item>
    </string-array>
    <string-array name="update_channel">
        <item>"release"</item>
        <item>"pre-release"</item>
    </string-array>
</resources>