<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/dialog_qrlogin_image"
            android:background="@drawable/qrcode_border"
            android:padding="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="h,1:1"
            android:contentDescription="@string/qrlogin_title"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_qrlogin_info"
            android:text="@string/qrlogin_state_WAITING_FOR_SCAN"
            android:textAlignment="center"
            android:padding="5dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/dialog_qrlogin_image"
            app:layout_constraintStart_toStartOf="@id/dialog_qrlogin_image"
            app:layout_constraintTop_toBottomOf="@id/dialog_qrlogin_image" android:textStyle="bold"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/qrlogin_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_qrlogin_info"/>
</androidx.constraintlayout.widget.ConstraintLayout>